Fix bug with AnimatedLink when wrapped to second line

--- a/src/Components/AnimatedLink/AnimatedLink.scss
+++ b/src/Components/AnimatedLink/AnimatedLink.scss
@@ -7,6 +7,7 @@
 
 .AnimatedLink {
   position: relative;
+  display: inline-block;
   color: blue;
   text-decoration: underline blue solid;
 
@@ -14,7 +15,7 @@
     content: '';
     position: absolute;
     width: calc(100% - 6px);
-    height: 100%;
+    height: 110%;
     top: 0px;
     left: 3px;
     border-bottom: 3px solid blue;
@@ -30,7 +31,7 @@
     content: '';
     position: absolute;
     width: calc(100% - 14px);
-    height: 112%;
+    height: 123%;
     top: 0px;
     left: 7px;
     border-bottom: 3px solid blue;
